--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <section>
         <h2 class="typewriter">This is my portfolio</h2>
         <p>
-          เว็บไซต์นี้จัดทำเพื่อช่วยในการประกอบการตัดสินใจของคณะกรรมการในการคัดเลือกนักศึกษาเข้าศึกษาต่อระดับปริญญาตรีในสาขาเทคโนโลยีสารสนเทศ
+          เว็บไซต์นี้จัดทำเพื่อช่วยในการประกอบการตัดสินใจของคณะกรรมการในการคัดเลือกนักศึกษาเข้าศึกษาต่อ
+          <br>ระดับปริญญาตรีในสาขาวิชาเทคโนโลยีสารสนเทศ <br>และนวัตกรรมอัจฉริยะ <br>(Information Technology and Intelligent Innovation: ITII)
         </p>
       </section>
 
@@ -61,6 +62,9 @@
         </div>
         <div class="icon">
           <img src="img/chat-gpt.png" width="40px" height="40px" />
+        </div>
+        <div class="icon">
+          <img src="img/OIP.jpg" width="40px" height="40px" />
         </div>
       </div>
     </section>
@@ -109,6 +113,7 @@
           <img class="slide" src="img/certificate1.png" alt="Image #4" height="250px" >
           <img class="slide" src="img/certificate2.png" alt="Image #5" height="250px" >
           <img class="slide" src="img/certificate3.png" alt="Image #6" height="250px" >
+          <img class="slide" src="img/borntodev-academy_Lite _ Fundamental Web Dev with HTML5 & CSS3_certificate.png" alt="Image #6" height="250px" >
           
         </div>
         <button class="previous">&#10094</button>
